fixed text-box visibility issue

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -31,7 +31,8 @@
     z-index: 9;
     transform: none !important;
 
-    .text-box {
+    > .text-box,
+    > .text-box-region .text-box {
       opacity: 1;
       &.hidden {
         opacity: 0;
